examples/test/testpolicy8388.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8388
  namespace: namespace368
spec:
  podSelector:
    matchLabels:
      key48: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value15
          key39: value45
          key44: value14
      podSelector:
        matchLabels:
          key33: value39
          key43: value33
